--- a/Health/Presentation/HealthMainScreen/View/Base.lproj/Home.storyboard
+++ b/Health/Presentation/HealthMainScreen/View/Base.lproj/Home.storyboard
@@ -57,14 +57,14 @@
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </stackView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wFc-jm-5e5">
-                                                <rect key="frame" x="83" y="104.33333333333334" width="248" height="250.00000000000003"/>
+                                                <rect key="frame" x="0.0" y="104.33333333333334" width="414" height="250.00000000000003"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imgCircles" translatesAutoresizingMaskIntoConstraints="NO" id="3V3-CP-tyF">
-                                                        <rect key="frame" x="0.0" y="0.0" width="248" height="250"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="414" height="250"/>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     </imageView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="mtX-vB-gOw">
-                                                        <rect key="frame" x="77" y="90.333333333333314" width="94" height="69.333333333333314"/>
+                                                        <rect key="frame" x="160" y="90.333333333333314" width="94" height="69.333333333333314"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="107" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XYe-hW-LBJ">
                                                                 <rect key="frame" x="0.0" y="0.0" width="94" height="53.666666666666664"/>
@@ -303,10 +303,9 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="wFc-jm-5e5" firstAttribute="height" secondItem="6Tk-OE-BBY" secondAttribute="height" multiplier="0.327225" id="H3A-Jl-knN"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" relation="lessThanOrEqual" secondItem="1DC-tJ-w0I" secondAttribute="bottom" constant="22" id="KhD-8E-06k"/>
                             <constraint firstItem="hch-1I-qlb" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="VNO-tw-io2"/>
-                            <constraint firstItem="wFc-jm-5e5" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="width" multiplier="0.599034" id="WVc-aY-ecM"/>
+                            <constraint firstItem="wFc-jm-5e5" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="width" id="WVc-aY-ecM"/>
                             <constraint firstItem="4lB-ho-Afw" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="qGh-wi-kC6"/>
                             <constraint firstItem="4lB-ho-Afw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="rLK-ES-7Lw"/>
                             <constraint firstItem="4lB-ho-Afw" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="uVm-2C-kLt"/>
